little change in calculate

--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -385,6 +385,7 @@
     }
 
     &__form-group.active {
+        background: var(--accent-primary);
         label {
             pointer-events: all;
         }
