finally result of calculator

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -241,7 +241,7 @@
                         <use xlink:href="#uaz"></use>
                     </svg>
                         <svg data-car="isuzu" class="configure__graphic">
-                            <use xlink:href="#isuzu"></use>
+                            <use xlink:href="#isuzu-model"></use>
                     </svg>
                 </div>
             </div>
