--- a/src/partials/components/footer.hbs
+++ b/src/partials/components/footer.hbs
@@ -6,9 +6,9 @@
                 ООО «Спорт Лайн Поволжье» <span>ИНН: 5260422236 ОГРН: 1165260051835</span>
               </div>
               <ul class="footer__content-main">
-                <li><a href="">Сервис</a></li>
-                <li><a href="">Медиагалерея</a></li>
-                <li><a href="">Контакты</a></li>
+                <li><a href="services.html">Сервис</a></li>
+                <li><a href="media.html">Медиагалерея</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
               </ul>
               <div class="footer__content-contacts">
                 <div>
