--- a/src/scss/components/intro.scss
+++ b/src/scss/components/intro.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     align-items: flex-end;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     padding-top: var(--intro-padding-top);
     padding-bottom: 10rem;
