--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -3,27 +3,58 @@
 }
 
 .fancybox__container {
-    background-color: #333B46 !important;
+    background-color: #333b46 !important;
+}
+// .fancybox__container.is-animated {
+//     z-index: 9999999999999999999999999999999999;
+// }
+
+.fancybox__track .fancybox__slide.has-video {
+    cursor: default !important;
 }
 
-.popup {
-    border-radius: 10px;
-    width: 84rem !important;
-    @media (max-width: 1180px) {
-        width: 71rem !important;
-    }
-    @media (max-width: 726px) {
-        width: 50rem !important;
-    }
-    @media (max-width: 540px) {
-        width: auto!important ;
-    }
+.fancybox__carousel.is-draggable .fancybox__slide,
+.fancybox__carousel.is-draggable .fancybox__slide .fancybox__content {
+    cursor: default;
+}
 
-    
+.modal .form {
+    cursor: default;
+    @media (max-width: 768px) {
+        width: 80%;
+    }
+}
+.modal form {
+    @media (max-width: 768px) {
+        flex-wrap: wrap;
+    }
+}
+.modal .expert__item {
+    @media (max-width: 768px) {
+        width: 50%;
+    }
+}
+.form-head {
+    cursor: default;
+}
+.form-desk {
+    cursor: default;
+}
+
+.modal {
+    border-radius: 10px;
+    cursor: default !important;
+
+    // @media (max-width: 726px) {
+    //     width: 50rem !important;
+    // }
+    // @media (max-width: 540px) {
+    //     width: auto!important ;
+    // }
 
     & .form-head {
         font: var(--title-M-narrow);
-        color: #0F1926;
+        color: #0f1926;
         width: 64%;
         @media (max-width: 1180px) {
             font-size: 4rem;
@@ -39,19 +70,22 @@
 
     & .form-desk {
         font: var(--body-L-narrow);
-        color: #0F1926;
+        color: #0f1926;
         padding-top: 2.5rem;
         width: 52%;
         opacity: 0.6;
         @media (max-width: 1180px) {
             font-size: 1.6rem;
         }
-        @media (max-width: 726px) {
-            display: none;
+        @media (max-width: 767px) {
+            width: 100%;
+            padding-top: 1rem;
         }
-    }
-   
 
+        // @media (max-width: 726px) {
+        //     display: none;
+        // }
+    }
 }
 
 .fancybox__content {
@@ -61,14 +95,16 @@
     }
 }
 
-.popup {
+.modal {
+    //  width: 84vw!important;
+    // display: none;
     form {
         display: flex;
         gap: 1rem;
         padding-top: 4rem;
 
-        @media (max-width: 741px) {
-          flex-wrap: wrap;
+        @media (max-width: 768px) {
+            flex-wrap: wrap;
         }
 
         @media (max-width: 560px) {
@@ -78,10 +114,10 @@
     }
 
     form input {
-        border: 1px solid #A3AFCD;
+        border: 1px solid #a3afcd;
         padding: 1.875rem 2.5rem 1.875rem 2.5rem;
         border-radius: 10px;
-        color: #A3AFCD;
+        color: #a3afcd;
         font: var(--body-XL);
         width: 24rem;
         font-size: 2.5rem;
@@ -94,9 +130,9 @@
             width: 100%;
         }
 
-        @media (max-width: 741px) {
+        @media (max-width: 768px) {
             flex: 0 0 100%;
-          }
+        }
 
         @media (max-width: 560px) {
             height: 6rem;
@@ -104,9 +140,7 @@
         }
     }
 
-    
-
-    input:required+label {
+    input:required + label {
         font-size: 1.6rem;
         font-weight: 700;
         top: -6px;
@@ -115,9 +149,9 @@
         transform: translateY(0%);
     }
 
-    input:invalid+label {
+    input:invalid + label {
         font: var(--body-XL);
-        color: #A3AFCD;
+        color: #a3afcd;
         position: absolute;
         left: 2.5rem;
         top: 50%;
@@ -135,12 +169,11 @@
         }
     }
 
-
     .expert__item {
         position: relative;
-        @media (max-width: 741px) {
+        @media (max-width: 768px) {
             flex: 0 0 100%;
-          }
+        }
         @media (max-width: 560px) {
             flex: 0 0 100%;
         }
@@ -148,7 +181,7 @@
 
     form label {
         font: var(--body-XL);
-        color: #A3AFCD;
+        color: #a3afcd;
         position: absolute;
         left: 2.5rem;
         top: 28px;
@@ -172,21 +205,20 @@
         font: var(--body-XL);
         width: 24rem;
         font-size: 2.5rem;
-        background-color: #1B74E3;
+        background-color: #1b74e3;
         display: flex;
-            height: 8rem;
+        height: 8rem;
         align-items: center;
         gap: 1rem;
         justify-content: space-between;
         @media (max-width: 1180px) {
             width: 20rem;
         }
-        
-        @media (max-width: 741px) {
+
+        @media (max-width: 768px) {
             flex: 0 0 100%;
-            height: 8rem;
-          }
-          @media (max-width: 726px) {
+        }
+        @media (max-width: 726px) {
             font-size: 2rem;
         }
 
@@ -208,7 +240,7 @@
 
     .expert__agree {
         font: var(--body-S);
-        color: #A3AFCD;
+        color: #a3afcd;
         padding-top: 3rem;
         max-width: 44rem;
         display: flex;
@@ -233,8 +265,8 @@
     }
 }
 
-.fancybox__content>.carousel__button.is-close {
-    color: #A3AFCD!important;
+.fancybox__content > .carousel__button.is-close {
+    color: #a3afcd !important;
     right: 40px;
     top: 45px;
     box-shadow: none;
@@ -247,11 +279,10 @@
     }
     @media (max-width: 540px) {
         top: -40px;
-    left: 50%;
-    color: #fff!important;
-    transform: translateX(-50%);
+        left: 50%;
+        color: #fff !important;
+        transform: translateX(-50%);
     }
-
 }
 
 .carousel__button svg {
@@ -259,12 +290,12 @@
     height: 40px;
     @media (max-width: 726px) {
         width: 35px;
-    height: 35px;
+        height: 35px;
     }
     @media (max-width: 540px) {
         width: 30px;
         height: 30px;
-}
+    }
 }
 
 .fancybox__slide {
@@ -274,35 +305,35 @@
     }
 }
 
-.popup {
+.modal {
     form .expert__item:hover label {
-    font-size: 1.6rem;
-    font-weight: 700;
-    top: -6px;
-    background-color: #fff;
-    padding: 0 3px;
-    left: 2.5rem;
-    transform: translateY(0);
-}
+        font-size: 1.6rem;
+        font-weight: 700;
+        top: -6px;
+        background-color: #fff;
+        padding: 0 3px;
+        left: 2.5rem;
+        transform: translateY(0);
+    }
 
     .parsley-error:focus ~ label,
     .parsley-error:not(:focus):valid ~ label {
-    font-size: 1.6rem;
-    font-weight: 700;
-    top: -6px;
-    background-color: #fff;
-    padding: 0 3px;
-    left: 2.5rem;
-}
-input:focus ~ label,
+        font-size: 1.6rem;
+        font-weight: 700;
+        top: -6px;
+        background-color: #fff;
+        padding: 0 3px;
+        left: 2.5rem;
+    }
+    input:focus ~ label,
     input:not(:focus):valid ~ label {
-    font-size: 1.6rem;
-    font-weight: 700;
-    top: -6px;
-    background-color: #fff;
-    padding: 0 3px;
-    left: 2.5rem;
-}
+        font-size: 1.6rem;
+        font-weight: 700;
+        top: -6px;
+        background-color: #fff;
+        padding: 0 3px;
+        left: 2.5rem;
+    }
     input:required + label {
         transition: all 0.3s ease;
         font-size: 1.6rem;
@@ -317,7 +348,7 @@ input:focus ~ label,
     input:invalid + label {
         transition: all 0.3s ease;
         font: var(--body-XL);
-        color: #A3AFCD;
+        color: #a3afcd;
         position: absolute;
         left: 2.5rem;
         top: 50%;
@@ -325,7 +356,7 @@ input:focus ~ label,
     }
 }
 
-.has-video .fancybox__content>.carousel__button.is-close {
+.has-video .fancybox__content > .carousel__button.is-close {
     top: -50px;
     right: -50px;
 }
@@ -335,43 +366,123 @@ input:focus ~ label,
 }
 
 .expert__agree-text a {
-    color: #1B74E3;
+    color: #1b74e3;
 }
 .expert__agree-text:hover a {
     color: #0f1926;
 }
 
 .fancybox__track .fancybox__slide.has-video {
-    align-self: center
+    align-self: center;
 }
-
-#thanks_manager .form-style-1 button {
+.modal .form {
     background-color: #fff;
-    color: #1B74E3;
-    @media (max-width: 500px) {
-        font-size: 2rem;
-        background-color: #1B74E3;
-        color: #fff;
-        width: 100%;
-        padding: 1.9rem;
-        border-radius: 7px;
-}
+    padding: 5rem;
+    border-radius: 1rem;
+    @media (max-width: 550px) {
+        position: relative;
+        padding: 2.5rem 2rem;
+        width: 95%;
+    }
 }
 
-#thanks_manager .form-desk {
+.modal .button--light {
+    width: 21.9rem;
+    margin-top: 4rem;
+    padding: 3rem 2.5rem;
+    @media (max-width: 767px) {
+        width: unset;
+        width: 100%;
+        margin-top: 2.5rem;
+    }
+    @media (max-width: 600px) {
+        background-color: #1b74e3;
+        color: #fff;
+        justify-content: center;
+        :hover {
+            background-color: var(--accent-primary-hover);
+        }
+    }
+}
+
+.modal.active {
+    @media (max-width: 550px) {
+        justify-content: end;
+        padding-bottom: 1.5rem;
+    }
+}
+
+.modal__close {
+    top: 0;
+    @media (max-width: 550px) {
+        top: -10%;
+        left: 50%;
+    }
+}
+.modal__close svg {
+    @media (max-width: 550px) {
+        width: 30px;
+        height: 30px;
+    }
+}
+.modal__close {
+    top: 0;
+    @media (max-width: 550px) {
+        top: -10%;
+        left: 50%;
+    }
+}
+.modal__close svg {
+    @media (max-width: 550px) {
+        width: 30px;
+        height: 30px;
+    }
+}
+
+.form-header {
+    position: relative;
+    @media (max-width: 550px) {
+        position: unset;
+    }
+}
+.form-header {
+    position: relative;
+    @media (max-width: 550px) {
+        position: unset;
+    }
+}
+// .form-style-1 button {
+//     background-color: #fff;
+//     color: #1b74e3;
+//     @media (max-width: 500px) {
+//         font-size: 2rem;
+//         background-color: #1b74e3;
+//         color: #fff;
+//         width: 100%;
+//         padding: 1.9rem;
+//         border-radius: 7px;
+//     }
+// }
+
+.form-desk {
     display: block;
     padding-top: 5px;
 }
 
-.thanks .button, #thanks_manager .form-style-1 button {
-    background-color: #fff;
-    color: #1B74E3;
-    @media (max-width: 500px) {
-        font-size: 2rem;
-        background-color: #1B74E3;
-        color: #fff;
-        width: 100%;
-        padding: 1.9rem;
-        border-radius: 7px;
-}
+// .thanks .button,
+// #success-modal .form-style-1 button {
+//     background-color: #fff;
+//     color: #1b74e3;
+//     @media (max-width: 500px) {
+//         font-size: 2rem;
+//         background-color: #1b74e3;
+//         color: #fff;
+//         width: 100%;
+//         padding: 1.9rem;
+//         border-radius: 7px;
+//     }
+// }
+
+#success-modal form {
+    background-color: #fcfdff;
 }
