--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -30,3 +30,8 @@
 @import './components/reviews';
 @import './components/plants';
 @import './components/popup';
+@import './components/services';
+@import './components/error';
+@import './components/media';
+@import './components/headertwink';
+@import './components/conctacts';
