--- a/src/partials/components/billet.hbs
+++ b/src/partials/components/billet.hbs
@@ -1,6 +1,8 @@
+<a data-fancybox="" href="https://www.youtube.com/watch?v=kJZ7Bia772Q&amp;feature=youtu.be&amp;ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5">
 <div class="billet">
-    <img class="billet__bg" src="img/billet.jpg" alt="Превью видео">
+   <video class="overview__video" src="assets/video/umka.mp4" autoplay loop muted></video>
     <div class="billet__play-button">
         {{> play-button }}
     </div>
 </div>
+</a>
