--- a/src/partials/components/header.hbs
+++ b/src/partials/components/header.hbs
@@ -19,7 +19,7 @@
                     {{/each}}
                 </ul>
             </nav>
-            <button data-src="#order" data-fancybox class="header__button button-ellipse">Оставить заявку</button>
+            <a href="#callback-modal" class="header__button button-ellipse">Оставить заявку</a>
         </div>
     </div>
     {{> menu-burger }}
