--- a/src/partials/layouts/layout.hbs
+++ b/src/partials/layouts/layout.hbs
@@ -31,6 +31,8 @@
     <meta property="og:site_name" content="Бренд или имя сайта">
     <meta property="og:locale" content="ru_RU">
     <script  src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    
    {{!-- <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> --}}
    {{!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> --}}
    <script src="https://parsleyjs.org/dist/parsley.js"></script>
@@ -60,10 +62,11 @@
             {{/block}}
         </main>
         {{> footer }}
+        {{> modals }}
         {{> ie-placeholder }}
         <script src="js/app.js"></script>
         <script src="assets/backend/backend.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+      
         <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
         {{!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> --}}
     </div>
