--- a/src/scss/components/features.scss
+++ b/src/scss/components/features.scss
@@ -1,6 +1,6 @@
 .features {
     display: flex;
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     padding: calc(32px + (80 - 32) * (100vw - 360px) / (1680 - 360)) 0;
 
