--- a/src/scss/components/menu-burger.scss
+++ b/src/scss/components/menu-burger.scss
@@ -2,7 +2,7 @@
     position: absolute;
     right: 100%;
     top: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
     background-color: var(--main-primary);
@@ -222,4 +222,7 @@
             width: 100%;
         }
     }
+    .play-button:hover{
+        background-color: #196BD1;
+      }
 }
