--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -1,54 +1,59 @@
 .modal {
-  body:not(.loaded) & {
-      opacity: 0;
-      visibility: hidden;
-  }
+    body:not(.loaded) & {
+        opacity: 0;
+        visibility: hidden;
+    }
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 1500;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background: $overlay-color;
+    overflow-x: hidden;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.4s, visibility 0s linear 0.4s;
 
-  position: fixed;
-  left: 0;
-  top: 0;
-  z-index: 1500;
+    &.active {
+        opacity: 1;
+        visibility: inherit;
+        transition: opacity 0.4s, visibility 0.4s;
+    }
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    &__container {
+        max-width: var(--max-container-width);
+        margin: 0 auto;
+        padding: 6rem 0;
+    }
 
-  width: 100%;
-  height: 100%;
+    &__inner {
+        position: relative;
 
-  background: $overlay-color;
+        padding: 4rem;
 
-  overflow-x: hidden;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.4s, visibility 0s linear 0.4s;
+        background-color: $modal-bg-color;
+    }
 
-  &.active {
-    opacity: 1;
-    visibility: inherit;
-    transition: opacity 0.4s, visibility 0.4s;
-  }
+    &__close {
+        position: absolute;
+        bottom: 100%;
+        right: 0;
 
-  &__container {
-    max-width: var(--max-container-width);
-    margin: 0 auto;
-    padding: 6rem 0;
-  }
+        color: $modal-bg-color;
+    }
+}
 
-  &__inner {
-    position: relative;
+// #success-modal .form {
+//     background-color: #FCFDFF;
+//     padding: 5rem;
+//     border-radius: 1rem;
+// }
 
-    padding: 4rem;
-
-    background-color: $modal-bg-color;
-  }
-
-  &__close {
-    position: absolute;
-    bottom: 100%;
-    right: 0;
-
-    color: $modal-bg-color;
-  }
+.modal {
+    background-color: #0f1926;
 }
