--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -34,6 +34,12 @@ body {
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     color: var(--main-primary);
+    @media (min-width: 1921px) {
+        zoom: 1.2;
+    }
+    @media (min-width: 2500px) {
+        zoom: 1.33;
+    }
 }
 
 main {
