--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -170,6 +170,9 @@ a:hover {
 
 
 @media (min-width: 1681px) {
+    h1 {
+        font-size: 100px !important;
+    }
     h2,
     .callback__content-container__second-mobile a {
         font-size: 8.5rem !important;
