add autocomplete after reload

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -289,7 +289,7 @@
                         </div>
                     </li>
                 </ul>
-                <form data-config="configUaz" class="configure__form tab-content_show">
+                <form autocomplete="off" data-config="configUaz" class="configure__form tab-content_show">
                     <div class="configure__form-fields">
                         <fieldset class="configure__form-group configure__form-group-chosen">
                             <h3 class="configure__form-group-title">Выбранное оборудование</h3>
@@ -399,7 +399,7 @@
                         </button>
                     </div>
                 </form>
-                 <form data-config="configIsuzu" class="configure__form">
+                 <form autocomplete="off" data-config="configIsuzu" class="configure__form">
                     <div class="configure__form-fields">
                         <fieldset class="configure__form-group configure__form-group-chosen">
                             <h3 class="configure__form-group-title">Выбранное оборудование</h3>
